--- a/ems/views/footer.ejs
+++ b/ems/views/footer.ejs
@@ -1,7 +1,9 @@
-<hr>
-<footer>
 
-    <p>© Company 2017</p>
+<footer>
+<div class="container">
+  <p>© Arlix Sorto 2020</p>
+</div>
+
 
 </footer>
 
