--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -6,11 +6,19 @@
   <main>
     <div class="jumbotron">
       <div class="container">
-        <h1>Employee Data Entry Form</h1>
+        <h1>Employee Managment</h1>
       </div>
 
     </div>
-    <%- include ('list') -%>
+<div class="container">
+<div class="button-container">
+  <a href="/new"> <button id="addBtn" class="btn">Add New Employee</button></a>
+  <a href="/view"> <button id="viewBtn" class="btn">Vew Employees</button></a>
+
+
+</div>
+
+</div>
   </main>
   <%- include ('footer') -%>
 </body>
