--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -1,15 +1,33 @@
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+  <%- include ('header') -%>
+<body>
+  <%- include ('navbar') -%>
+  <main>
+<div class="container new">
+  <h2>Add Employee</h2>
   <form>
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <label for="firstNameInput">First name</label>
+      <input type="firstName" class="form-control" id="firstNameInput" placeholder="First name">
 
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <label for="lastNameInput">Last Name</label>
+      <input type="lastName" class="form-control" id="lastNameInput" placeholder="Last Name">
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-group">
+      <label for="emailInput">Email</label>
+      <input type="email" class="form-control" id="emailInput" placeholder="Email">
+    </div>
+
+    <button type="submit" class="btn">Add Employee</button>
   </form>
 </div>
+</main>
+<%- include ('footer') -%>
+</body>
+
+</html>
+
