--- a/ems/views/view.ejs
+++ b/ems/views/view.ejs
@@ -1,11 +1,20 @@
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+  <%- include ('header') -%>
+<body>
+  <%- include ('navbar') -%>
+  <main>
+
+<div class="container view">
+
+  <h2>View Employees</h2>
   <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">#</th>
         <th scope="col">First</th>
         <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Email</th>
       </tr>
     </thead>
     <tbody>
@@ -30,3 +39,9 @@
     </tbody>
   </table>
 </div>
+</main>
+<%- include ('footer') -%>
+</body>
+
+</html>
+
