--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -6,22 +6,22 @@
   <main>
 <div class="container new">
   <h2>Add Employee</h2>
-  <form>
+  <form method="post" action="/create" >
     <div class="form-group">
       <label for="firstNameInput">First name</label>
-      <input type="firstName" class="form-control" id="firstNameInput" placeholder="First name">
+      <input type="firstName" name="firstName" class="form-control" id="firstNameInput" placeholder="First name">
 
     </div>
     <div class="form-group">
       <label for="lastNameInput">Last Name</label>
-      <input type="lastName" class="form-control" id="lastNameInput" placeholder="Last Name">
+      <input type="lastName" name="lastName" class="form-control" id="lastNameInput" placeholder="Last Name">
     </div>
 
     <div class="form-group">
       <label for="emailInput">Email</label>
-      <input type="email" class="form-control" id="emailInput" placeholder="Email">
+      <input type="email" name="email" class="form-control" id="emailInput" placeholder="Email">
     </div>
-
+    <input name="_csrf" value="<%= csrfToken %>" type="hidden" />
     <button type="submit" class="btn">Add Employee</button>
   </form>
 </div>
