--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -13,7 +13,7 @@
 <div class="container">
 <div class="button-container">
   <a href="/new"> <button id="addBtn" class="btn">Add New Employee</button></a>
-  <a href="/view"> <button id="viewBtn" class="btn">Vew Employees</button></a>
+  <a href="/list"> <button id="viewBtn" class="btn">Vew Employees</button></a>
 
 
 </div>
