--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -6,7 +6,7 @@
   <main>
 <div class="container new">
   <h2>Add Employee</h2>
-  <form method="post" action="/create" >
+  <form method="post" action="/process" >
     <div class="form-group">
       <label for="firstNameInput">First name</label>
       <input type="firstName" name="firstName" class="form-control" id="firstNameInput" placeholder="First name">
