--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -1,22 +1,23 @@
+
 <nav class="navbar navbar-expand-sm navbar-dark">
 <div class="container">
   <ul class="navbar-nav">
 
-  <li class="nav-item <% if(homeActive){ %>active<%}%>">
+  <li class="nav-item <% if(active==="home"){ %>active<%}%>">
 
       <a class="nav-link" href="/">Home</a>
 
     </li>
 
-    <li class="nav-item <% if(newActive){ %>active<%}%>" >
+    <li class="nav-item <% if(active ==="new"){ %>active<%}%>" >
 
       <a class="nav-link" href="/new">Add Employee</a>
 
     </li>
 
-    <li class="nav-item <% if(viewActive){ %>active<%}%>" >
+    <li class="nav-item <% if(active === "view"){ %>active<%}%>" >
 
-        <a class="nav-link" href="/view">View Employees</a>
+        <a class="nav-link" href="/list">View Employees</a>
 
     </li>
 
