--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -6,13 +6,13 @@
   <main>
     <div class="jumbotron">
       <div class="container">
-        <h1>Employee Managment</h1>
+        <h1>Employee Managment System</h1>
       </div>
 
     </div>
 <div class="container">
 <div class="button-container">
-  <a href="/new"> <button id="addBtn" class="btn">Add New Employee</button></a>
+  <a href="/new"> <button id="_addBtn" class="btn">Add New Employees</button></a>
   <a href="/list"> <button id="viewBtn" class="btn">Vew Employees</button></a>
 
 
