--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -1,3 +1,12 @@
+<!--/*
+============================================
+; Title: Exercise 8.4
+; Author: Arlix Sorto
+; Date: 26 September 2020
+; Description: Milestone 4
+;===========================================
+*/-->
+
 <!DOCTYPE html>
 <html lang="en">
   <%- include ('header') -%>
